--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
+    "echarts": "^5.5.1",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
