--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "redux": "^5.0.1"
